--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primary60">#009EBD</color>
+    <color name="primary50">#00829C</color>
+    <color name="primary40">#00677C</color>
+    <color name="secondary">#CEE7F0</color>
+    <color name="surface_variant">#191C1D</color>
 </resources>
