--- a/app/src/main/res/layout/fragment_headlines_item.xml
+++ b/app/src/main/res/layout/fragment_headlines_item.xml
@@ -1,55 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="102dp"
-    android:padding="15dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    
+    android:padding="15dp">
+
     <ImageView
         android:id="@+id/article_image"
         android:layout_width="130dp"
         android:layout_height="72dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/sources_icon"
-        tools:background="@color/primary50" />
+        tools:background="@color/primary50"
+        tools:src="@drawable/sources_icon" />
 
-    <ImageView
-        android:id="@+id/source_image"
-        android:layout_width="23dp"
-        android:layout_height="23dp"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardview_for_source_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        app:cardCornerRadius="11dp"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@id/article_image"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/filter_icon"
-        tools:background="@color/primary" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/source_image"
+            android:layout_width="23dp"
+            android:layout_height="23dp"
+            tools:background="@color/primary60"
+            tools:src="@drawable/filter_icon" />
+
+    </androidx.cardview.widget.CardView>
+
 
     <TextView
         android:id="@+id/source_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:fontFamily="sans-serif-medium"
-        android:textSize="13sp"
-        android:maxLines="1"
         android:ellipsize="end"
-        app:layout_constraintStart_toEndOf="@id/source_image"
-        app:layout_constraintTop_toTopOf="@id/source_image"
-        app:layout_constraintBottom_toBottomOf="@id/source_image"
+        android:fontFamily="sans-serif-medium"
+        android:maxLines="1"
+        android:textSize="13sp"
+        app:layout_constraintBottom_toBottomOf="@id/cardview_for_source_image"
+        app:layout_constraintStart_toEndOf="@id/cardview_for_source_image"
+        app:layout_constraintTop_toTopOf="@id/cardview_for_source_image"
         tools:text="The New Yourk Times" />
 
     <TextView
         android:id="@+id/article_title"
-        android:layout_width="234sp"
+        android:layout_width="0dp"
         android:layout_height="45dp"
-        android:textSize="16sp"
-        android:maxLines="2"
-        android:ellipsize="end"
         android:layout_marginStart="20dp"
-        app:layout_constraintStart_toEndOf="@id/article_image"
+        android:ellipsize="end"
+        android:maxLines="2"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/article_image"
+        app:layout_constraintEnd_toEndOf="parent"
         tools:text="2023 layoff tracker: The latets on which companies have blablablablablalba" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
