--- a/app/src/main/res/layout/fragment_filters.xml
+++ b/app/src/main/res/layout/fragment_filters.xml
@@ -3,12 +3,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="17dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+<!--    <com.google.android.material.appbar.MaterialToolbar-->
+<!--        android:id="@+id/filters_toolbar"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:background="@color/primary60"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:title="Filters"-->
+<!--        app:menu="@menu/filters_toolbar_actions"-->
+<!--        app:titleCentered="true"-->
+<!--        app:titleTextColor="@color/white" />-->
 
     <com.google.android.material.button.MaterialButtonToggleGroup
         android:id="@+id/buttons_group"
         android:layout_width="wrap_content"
+        android:layout_marginTop="10dp"
         android:layout_height="56dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,11 +73,19 @@
         app:layout_constraintBottom_toBottomOf="@id/textholder_date"
         app:layout_constraintEnd_toEndOf="@id/buttons_group"/>
 
+<!--    <DatePicker-->
+<!--        android:id="@+id/date_picker"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        style="@style/ThemeOverlay.Material3.MaterialCalendar.Fullscreen" />-->
+
+
     <TextView
         android:id="@+id/calendar_picked_date_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Choose text"
+        android:textColor="@color/primary60"
         android:layout_marginEnd="2dp"
         app:layout_constraintTop_toTopOf="@id/calendar_button"
         app:layout_constraintBottom_toBottomOf="@id/calendar_button"
