--- a/app/src/main/res/layout/fragment_headlines.xml
+++ b/app/src/main/res/layout/fragment_headlines.xml
@@ -6,6 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".headlines.ui.HeadlinesFragment">
 
+<!--    <com.google.android.material.appbar.MaterialToolbar-->
+<!--        android:id="@+id/headlines_toolbar"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:background="@color/primary60"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:menu="@menu/toolbar_actions"-->
+<!--        app:title="News APP"-->
+<!--        app:titleCentered="true"-->
+<!--        app:titleTextColor="@color/white" />-->
+
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_layout"
         android:layout_width="match_parent"
@@ -13,7 +26,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-        <!--        Todo: change selected tab icon color-->
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
