--- a/app/src/main/res/layout/fragment_headlines_item.xml
+++ b/app/src/main/res/layout/fragment_headlines_item.xml
@@ -4,12 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="102dp"
-    android:padding="15dp">
+    >
 
     <ImageView
         android:id="@+id/article_image"
         android:layout_width="130dp"
         android:layout_height="72dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginStart="15dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:background="@color/primary50"
@@ -23,7 +25,7 @@
         app:cardCornerRadius="11dp"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@id/article_image"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="@id/article_image">
 
         <ImageView
             android:id="@+id/source_image"
@@ -57,9 +59,15 @@
         android:ellipsize="end"
         android:maxLines="2"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/article_image"
         app:layout_constraintStart_toEndOf="@id/article_image"
         app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="10dp"
         tools:text="2023 layoff tracker: The latets on which companies have blablablablablalba" />
+
+    <com.google.android.material.divider.MaterialDivider
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
