moved to clean arch, savepoint before delete unnecessary data models and repositories

--- a/app/src/main/res/layout/fragment_news_profile.xml
+++ b/app/src/main/res/layout/fragment_news_profile.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="false"
-    tools:context=".newsprofile.NewsProfileFragment">
+    tools:context=".presentation.newsprofile.NewsProfileFragment">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/paginationProgressBar"
