--- a/app/src/main/res/layout/fragment_headlines_general.xml
+++ b/app/src/main/res/layout/fragment_headlines_general.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".headlines.ui.fragments.HeadlinesGeneralFragment">
+    tools:context=".presentation.headlines.ui.fragments.HeadlinesGeneralFragment">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
