made filters screen on mvvm, need to change to MBI

--- a/app/src/main/res/layout/fragment_headlines.xml
+++ b/app/src/main/res/layout/fragment_headlines.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".presentation.headlines.HeadlinesFragment">
 
 <!--    <com.google.android.material.appbar.MaterialToolbar-->
@@ -23,6 +24,7 @@
         android:id="@+id/tab_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
