--- a/app/src/main/res/layout/fragment_filters.xml
+++ b/app/src/main/res/layout/fragment_filters.xml
@@ -1,54 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="@color/white"
+    android:layout_height="match_parent">
 
-<!--    <com.google.android.material.appbar.MaterialToolbar-->
-<!--        android:id="@+id/filters_toolbar"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:background="@color/primary60"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        app:title="Filters"-->
-<!--        app:menu="@menu/filters_toolbar_actions"-->
-<!--        app:titleCentered="true"-->
-<!--        app:titleTextColor="@color/white" />-->
+    <!--    <com.google.android.material.appbar.MaterialToolbar-->
+    <!--        android:id="@+id/filters_toolbar"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:background="@color/primary60"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:layout_constraintStart_toStartOf="parent"-->
+    <!--        app:layout_constraintTop_toTopOf="parent"-->
+    <!--        app:title="Filters"-->
+    <!--        app:menu="@menu/filters_toolbar_actions"-->
+    <!--        app:titleCentered="true"-->
+    <!--        app:titleTextColor="@color/white" />-->
 
     <com.google.android.material.button.MaterialButtonToggleGroup
         android:id="@+id/buttons_group"
         android:layout_width="wrap_content"
-        android:layout_marginTop="10dp"
         android:layout_height="56dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:singleSelection="true">
 
         <Button
-            style="?attr/materialButtonOutlinedStyle"
+
             android:id="@+id/popular_button"
+            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
             android:layout_width="125dp"
             android:layout_height="match_parent"
             android:text="Popular"
-            android:textSize="16sp"/>
+            android:textSize="16sp" />
+
         <Button
-            style="?attr/materialButtonOutlinedStyle"
             android:id="@+id/new_button"
+            style="?attr/materialButtonOutlinedStyle"
+            android:backgroundTint="@color/chip_background_color"
             android:layout_width="125dp"
             android:layout_height="match_parent"
             android:text="New"
-            android:textSize="16sp"/>
+            android:textSize="16sp" />
+
         <Button
-            style="?attr/materialButtonOutlinedStyle"
             android:id="@+id/relevant_button"
+            style="?attr/materialButtonOutlinedStyle"
+            android:backgroundTint="@color/chip_background_color"
             android:layout_width="125dp"
             android:layout_height="match_parent"
             android:text="Relevant"
-            android:textSize="16sp"/>
+            android:textSize="16sp" />
 
     </com.google.android.material.button.MaterialButtonToggleGroup>
 
@@ -56,12 +61,12 @@
         android:id="@+id/textholder_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Date"
         android:layout_marginTop="40dp"
-        app:layout_constraintStart_toStartOf="@id/buttons_group"
-        app:layout_constraintTop_toBottomOf="@id/buttons_group"
         android:fontFamily="sans-serif-medium"
-        android:textSize="14sp" />
+        android:text="Date"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="@id/buttons_group"
+        app:layout_constraintTop_toBottomOf="@id/buttons_group" />
 
     <Button
         android:id="@+id/calendar_button"
@@ -69,65 +74,112 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:icon="@drawable/calendar_button_icon"
-        app:layout_constraintTop_toTopOf="@id/textholder_date"
         app:layout_constraintBottom_toBottomOf="@id/textholder_date"
-        app:layout_constraintEnd_toEndOf="@id/buttons_group"/>
+        app:layout_constraintEnd_toEndOf="@id/buttons_group"
+        app:layout_constraintTop_toTopOf="@id/textholder_date" />
 
-<!--    <DatePicker-->
-<!--        android:id="@+id/date_picker"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        style="@style/ThemeOverlay.Material3.MaterialCalendar.Fullscreen" />-->
+    <!--    <DatePicker-->
+    <!--        android:id="@+id/date_picker"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        style="@style/ThemeOverlay.Material3.MaterialCalendar.Fullscreen" />-->
 
 
     <TextView
         android:id="@+id/calendar_picked_date_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="2dp"
         android:text="Choose text"
         android:textColor="@color/primary60"
-        android:layout_marginEnd="2dp"
-        app:layout_constraintTop_toTopOf="@id/calendar_button"
         app:layout_constraintBottom_toBottomOf="@id/calendar_button"
-        app:layout_constraintEnd_toStartOf="@id/calendar_button" />
+        app:layout_constraintEnd_toStartOf="@id/calendar_button"
+        app:layout_constraintTop_toTopOf="@id/calendar_button" />
 
     <TextView
         android:id="@+id/textholder_language"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:text="Language"
-        app:layout_constraintStart_toStartOf="@id/textholder_date"
-        app:layout_constraintTop_toBottomOf="@id/textholder_date"
         android:fontFamily="sans-serif-medium"
-        android:textSize="14sp" />
+        android:text="Language"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="@id/textholder_date"
+        app:layout_constraintTop_toBottomOf="@id/textholder_date" />
 
     <com.google.android.material.chip.ChipGroup
+        android:id="@+id/chip_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:checkedChip="@+id/chip_english"
         app:layout_constraintStart_toStartOf="@+id/textholder_language"
-        app:layout_constraintTop_toBottomOf="@id/textholder_language">
+        app:layout_constraintTop_toBottomOf="@id/textholder_language"
+        app:selectionRequired="true"
+        app:singleSelection="true">
 
         <com.google.android.material.chip.Chip
             android:id="@+id/chip_russian"
             style="@style/Widget.Material3.Chip.Suggestion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Русский" />
+            android:text="Русский"
+            app:chipBackgroundColor="@color/chip_background_color" />
 
         <com.google.android.material.chip.Chip
             android:id="@+id/chip_english"
             style="@style/Widget.Material3.Chip.Suggestion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="English" />
+            android:text="English"
+            app:chipBackgroundColor="@color/chip_background_color" />
 
         <com.google.android.material.chip.Chip
             android:id="@+id/chip_german"
             style="@style/Widget.Material3.Chip.Suggestion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Deutsch" />
+            android:text="Deutsch"
+            app:chipBackgroundColor="@color/chip_background_color" />
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chip_arabic"
+            style="@style/Widget.Material3.Chip.Suggestion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="عربي"
+            app:chipBackgroundColor="@color/chip_background_color" />
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chip_spanish"
+            style="@style/Widget.Material3.Chip.Suggestion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Español"
+            app:chipBackgroundColor="@color/chip_background_color" />
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chip_french"
+            style="@style/Widget.Material3.Chip.Suggestion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Français"
+            app:chipBackgroundColor="@color/chip_background_color" />
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chip_italian"
+            style="@style/Widget.Material3.Chip.Suggestion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Italiano"
+            app:chipBackgroundColor="@color/chip_background_color" />
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chip_сhinese"
+            style="@style/Widget.Material3.Chip.Suggestion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="中国人"
+            app:chipBackgroundColor="@color/chip_background_color" />
 
     </com.google.android.material.chip.ChipGroup>
 
