--- a/app/src/main/res/layout/fragment_filtered_news.xml
+++ b/app/src/main/res/layout/fragment_filtered_news.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".presentation.headlines.filter.FilteredNewsFragment">
+    tools:context=".presentation.headlines.filter.filtered.FilteredNewsFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
