--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="secondary">#CEE7F0</color>
     <color name="dark_grey">#40484B</color>
     <color name="surface_variant">#191C1D</color>
+    <color name="red">#BA1A1A</color>
 </resources>
