--- a/app/src/main/res/menu/toolbar_actions.xml
+++ b/app/src/main/res/menu/toolbar_actions.xml
@@ -8,7 +8,10 @@
         android:icon="@drawable/search_icon"
         android:title="Search"
         app:showAsAction="collapseActionView|ifRoom"
-        app:actionViewClass="androidx.appcompat.widget.SearchView" />
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
+        />
+<!--    app:actionViewClass="androidx.appcompat.widget.SearchView"-->
+
     <item
         android:id="@+id/filter_button"
         android:icon="@drawable/filter_icon"
