added usecase for each repository fun, change 3 same repository fun by one, orient lock on lottie activity, first load indicator in headlines fragments

--- a/app/src/main/res/drawable/splashscreen_stub.xml
+++ b/app/src/main/res/drawable/splashscreen_stub.xml
@@ -9,6 +9,6 @@
         android:strokeAlpha="0.999"
         android:strokeLineJoin="bevel"
         android:strokeWidth="1.3229257"
-        android:fillColor="@color/primary60"
+        android:fillColor="@color/blue60"
         android:fillAlpha="0.999" />
 </vector>
