--- a/app/src/main/res/layout/activity_lottie_animation.xml
+++ b/app/src/main/res/layout/activity_lottie_animation.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/primary60"
+    android:background="@color/blue60"
     tools:context=".presentation.LottieAnimationActivity">
 
     <com.airbnb.lottie.LottieAnimationView
