--- a/app/src/main/res/layout/fragment_filters.xml
+++ b/app/src/main/res/layout/fragment_filters.xml
@@ -70,7 +70,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="2dp"
         android:text="Choose text"
-        android:textColor="@color/primary60"
+        android:textColor="@color/blue60"
         app:layout_constraintBottom_toBottomOf="@id/calendar_button"
         app:layout_constraintEnd_toStartOf="@id/calendar_button"
         app:layout_constraintTop_toTopOf="@id/calendar_button" />
