--- a/app/src/main/res/layout/fragment_sources.xml
+++ b/app/src/main/res/layout/fragment_sources.xml
@@ -20,7 +20,7 @@
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:indeterminateTint="@color/primary50"
+        android:indeterminateTint="@color/blue40"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
