--- a/app/src/main/res/menu/sources_actions.xml
+++ b/app/src/main/res/menu/sources_actions.xml
@@ -3,7 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/filtered_button"
+        android:id="@+id/search_button"
+        android:icon="@drawable/search_icon"
+        android:title="Search"
+        app:showAsAction="collapseActionView|ifRoom"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
+        />
+
+    <item
+        android:id="@+id/filtered_sources_button"
         android:icon="@drawable/filter_icon"
         android:title="Filter"
         app:showAsAction="ifRoom"
