--- a/app/src/main/res/layout/fragment_filters.xml
+++ b/app/src/main/res/layout/fragment_filters.xml
@@ -49,7 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:fontFamily="sans-serif-medium"
-        android:text="Date"
+        android:text="@string/date_text"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@id/filter_buttons_group"
         app:layout_constraintTop_toBottomOf="@id/filter_buttons_group" />
@@ -69,7 +69,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="2dp"
-        android:text="Choose data"
+        android:text="@string/choose_data_text"
         android:textColor="@color/blue60"
         app:layout_constraintBottom_toBottomOf="@id/calendar_button"
         app:layout_constraintEnd_toStartOf="@id/calendar_button"
@@ -81,7 +81,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:fontFamily="sans-serif-medium"
-        android:text="Language"
+        android:text="@string/language_text"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@id/textholder_date"
         app:layout_constraintTop_toBottomOf="@id/textholder_date" />
