--- a/app/src/main/res/layout/fragment_sources_filters.xml
+++ b/app/src/main/res/layout/fragment_sources_filters.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-medium"
-        android:text="Category"
+        android:text="@string/category_fitler_text"
         android:textSize="14sp"
         android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
@@ -91,7 +91,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:fontFamily="sans-serif-medium"
-        android:text="Language"
+        android:text="@string/language_filter_text"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@id/category_chip_group"
         app:layout_constraintTop_toBottomOf="@id/category_chip_group" />
