--- a/app/src/main/res/menu/artilce_profile_actions.xml
+++ b/app/src/main/res/menu/artilce_profile_actions.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/bookmark_button"
         android:icon="@drawable/bookmark_outline_icon"
-        android:title="Save"
+        android:title="@string/save_button"
         app:showAsAction="always"/>
 
 </menu>
