--- a/app/src/main/res/menu/filtered_news_toolbar.xml
+++ b/app/src/main/res/menu/filtered_news_toolbar.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/filtered_button"
         android:icon="@drawable/filter_icon"
-        android:title="Filter"
+        android:title="@string/filter_button"
         app:showAsAction="ifRoom"
         app:actionLayout="@layout/filter_action_item"/>
 
