--- a/app/src/main/res/menu/sources_actions.xml
+++ b/app/src/main/res/menu/sources_actions.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/search_button"
         android:icon="@drawable/search_icon"
-        android:title="Search"
+        android:title="@string/search_button"
         app:showAsAction="collapseActionView|ifRoom"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         />
@@ -13,7 +13,7 @@
     <item
         android:id="@+id/filtered_sources_button"
         android:icon="@drawable/filter_icon"
-        android:title="Filter"
+        android:title="@string/filter_button"
         app:showAsAction="ifRoom"
         app:actionLayout="@layout/filter_action_item"/>
 
