--- a/app/src/main/res/menu/toolbar_actions.xml
+++ b/app/src/main/res/menu/toolbar_actions.xml
@@ -6,16 +6,15 @@
     <item
         android:id="@+id/search_button"
         android:icon="@drawable/search_icon"
-        android:title="Search"
+        android:title="@string/search_button"
         app:showAsAction="collapseActionView|ifRoom"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         />
-<!--    app:actionViewClass="androidx.appcompat.widget.SearchView"-->
 
     <item
         android:id="@+id/filter_button"
         android:icon="@drawable/filter_icon"
-        android:title="Filter"
+        android:title="@string/filter_button"
         app:showAsAction="ifRoom" />
 
 </menu>
