--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="blue60">#009EBD</color>
     <color name="blue50">#00829C</color>
     <color name="blue40">#00677C</color>
-    <color name="secondary">#CEE7F0</color>
+    <color name="light_blue">#CEE7F0</color>
     <color name="dark_grey">#40484B</color>
     <color name="surface_variant">#191C1D</color>
     <color name="red">#BA1A1A</color>
