--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,7 +5,7 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
         <item name="colorPrimary">@color/blue60</item>
         <item name="colorPrimaryDark">@color/blue50</item>
-        <item name="colorSecondary">@color/secondary</item>
+        <item name="colorSecondary">@color/light_blue</item>
     </style>
 
     <style name="Theme.Aston_intensiv_final_project" parent="Base.Theme.Aston_intensiv_final_project" />
@@ -32,9 +32,7 @@
     </style>
 
     <style name="AppTheme.Toolbar" parent="Theme.Material3.DayNight.NoActionBar">
-        <!--This line changes the color of text in Toolbar-->
         <item name="android:textColorPrimary">@color/white</item>
-        <!--This line changes the color of icons in toolbar (back, overflow menu icons)-->
         <item name="android:textColorSecondary">@color/white</item>
     </style>
 
